# newt_dongle

./: .gitignore  README.firmware.md  README.md
3d-parts/: DongleCase2.012-Bottom.stl  DongleCase5.002-Case_Bottom.stl  DongleCase5.002-Case_Top.stl  DongleCase5.002.FCStd  DongleCase5.015-Case_Bottom.stl  DongleCase5.015-Case_Top.stl  DongleCase5.015.FCStd  DongleCaseCase2.013-LowerCaseCaseBody026.stl  DongleCaseCase2.013-LowerCaseCaseBodyChamfered.stl  DongleCaseCase2.013-UpperCaseCaseBody026.stl  DongleCaseCase2.013-UpperCaseCaseBodyChamfered.stl  DongleCaseCase2.013.FCStd
3d-parts/jigs/: Bender.002-Ejector.stl  Bender.003-Bender.stl  Cutter.002.stl  Detailer.001.stl  Detailer2.002.stl  Last_Bender.Case.002.stl  Last_Bender.Plunger.001.stl  Last_Bender.Stamper.002.stl  SolderJig1.002.stl
EspressifESP/: TODO.md  sdkconfig
EspressifESP/main/: CMakeLists.txt  tusb_composite_main.c
Firmware/App/: CMakeLists.txt  Posix  README.md  main.cpp  main.h
Firmware/CPUs/RP2040/: CMakeLists.txt  PicoAsyncLog.cpp  PicoAsyncLog.h  PicoCDCEndpoint.cpp  PicoDock.cpp  PicoDock.h  PicoScheduler.cpp  PicoUARTEndpoint.cpp  PicoUserSettings.cpp  (+1 more)
Firmware/CommandLine/: README.md  TestStdioLog.h  main.cpp
Firmware/NewtCOM/: CMakeLists.txt  README.md  main.cpp  main.h  usb_descriptors.c
Firmware/PiPico/: CMakeLists.txt  MNPFilter.cpp  README.md  RP2040  main.cpp  main.h  unused.cpp
Firmware/Test/: CMakeLists.txt  README.md  TestScheduler.cpp  TestStdioLog.cpp
Firmware/common/: CMakeLists.txt  Endpoint.cpp  Endpoint.h  Event.cpp  Event.h  Logger.cpp  Logger.h  Pipe.h  Scheduler.cpp  Scheduler.h  StatusDisplay.cpp  StatusDisplay.h  SystemTask.cpp  SystemTask.h  Task.cpp  Task.h  UserSettings.cpp  UserSettings.h
PiPico/: CMakeLists.txt  PicoAsyncLog.cpp  PicoCDCEndpoint.cpp  PicoCDCEndpoint.h  PicoDock.cpp  PicoSDCard.cpp  PicoSDCard.h  PicoScheduler.cpp  PicoScheduler.h  PicoStdioLog.cpp  PicoStdioLog.h  PicoSystem.cpp  PicoSystem.h  PicoUARTEndpoint.cpp  PicoUARTEndpoint.h  README.md  TODO.md  ffconf.h  main.cpp  main.h  nd_config.h  newt_dongle.cpp  tusb_config.h  unused.cpp  usb_descriptors.c
Test/: CMakeLists.txt  README.md  TestDataDevice.cpp  TestDataDevice.h  TestScheduler.h  TestStdioLog.cpp  TestStdioLog.h  main.cpp  nd_config.h
common/: Buffer.cpp  Buffer.h  CMakeLists.txt  CtrlBlock.cpp  CtrlBlock.h  CtrlBuffer.cpp  CtrlBuffer.h  DataBuffer.cpp  DataBuffer.h  Device.cpp  Device.h  Endpoint.cpp  Endpoint.h  Event.cpp  Event.h  Pipe.cpp  Pipe.h  Scheduler.cpp  Scheduler.h  Spoke.cpp  Spoke.h  Task.cpp  Task.h  Wheel.cpp  Wheel.h  main.cpp
common/Devices/: StdioLog.cpp  StdioLog.h
common/Endpoints/: CDCEndpoint.cpp  CDCEndpoint.h  SDCardEndpoint.h  StdioLog.cpp  StdioLog.h  TestEventGenerator.h  UARTEndpoint.cpp  UARTEndpoint.h
common/Filters/: HayesFilter.cpp  HayesFilter.h
common/Pipes/: BufferedPipe.cpp  BufferedPipe.h  MNPThrottle.cpp  MNPThrottle.h  Tee.cpp  Tee.h
documentation/: Hayes.md
hardware/: README.md
(+50 files in other folders)
